@@ -1,5 +1,7 @@
 SUBDIRS=doc src test m4
 
+AUTOMAKE_OPTIONS = foreign
+
 EXTRA_DIST= \
  AUTHORS \
  COPYING \
@@ -31,7 +33,7 @@ srcdoc: Doxyfile
 rpm:    dist
 	rpmbuild="rpm" && \
 	if [ `rpm --version | awk '{ print $$3 }'` > 4 ]; then rpmbuild="rpmbuild"; fi && \
-	$$rpmbuild -ta gwenhywfar-@rpm_version@.tar.gz
+	$$rpmbuild -ta gwenhywfar-@VERSION@.tar.gz
 
 win32:
 	mkdir -p distribution
@@ -41,13 +43,13 @@ win32:
 	 cp -r win32-tmp/include win32-devel/ && \
 	 cp -r win32-tmp/share win32-devel && \
 	 cp ../AUTHORS ../ChangeLog ../README ../README.W32 ../COPYING win32-devel/ && \
-	 tar pczvf gwenhywfar-@rpm_version@-win32-devel.tgz win32-devel && \
+	 tar pczvf gwenhywfar-@VERSION@-win32-devel.tgz win32-devel && \
 	 rm -Rf win32-devel && \
 	 rm -Rf win32-tmp
 	mkdir -p distribution/win32-bin && \
 	 cp -r src/gwenhywfar32.dll distribution/win32-bin/ && \
 	 cp ../AUTHORS ../ChangeLog ../README ../README.W32 ../COPYING win32-bin/ && \
 	 strip distribution/win32-bin/*.dll && \
-	 cd distribution && tar pczvf gwenhywfar-@rpm_version@-win32-bin.tgz win32-bin && \
+	 cd distribution && tar pczvf gwenhywfar-@VERSION@-win32-bin.tgz win32-bin && \
 	 rm -Rf win32-bin
 
