@@ -9,7 +9,6 @@ GWENHYWFAR_BUGREPORT_ADDR="<gwenhywfar-bugs@libchipcard.de>"
 AC_PREREQ(2.57)
 AC_INIT
 AC_CANONICAL_TARGET([])
-AM_INIT_AUTOMAKE(gwenhywfar, 0.9.4rc3)
 AC_CONFIG_SRCDIR([src/gwenhywfarapi.h])
 AC_CONFIG_HEADER([config.h])
 
@@ -19,12 +18,9 @@ AC_CONFIG_HEADER([config.h])
 GWENHYWFAR_VERSION_MAJOR=0
 GWENHYWFAR_VERSION_MINOR=9
 GWENHYWFAR_VERSION_PATCHLEVEL=4
-GWENHYWFAR_VERSION_BUILD=51
-GWENHYWFAR_VERSION_TAG="cvs"
-GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD($GWENHYWFAR_VERSION_TAG)"
-GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL($GWENHYWFAR_VERSION_TAG)"
-rpm_version="$VERSION"
-rpm_release="1"
+GWENHYWFAR_VERSION_BUILD=52
+GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD"
+GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
 AC_SUBST(GWENHYWFAR_VERSION_MAJOR)
 AC_SUBST(GWENHYWFAR_VERSION_MINOR)
@@ -33,8 +29,6 @@ AC_SUBST(GWENHYWFAR_VERSION_BUILD)
 AC_SUBST(GWENHYWFAR_VERSION_TAG)
 AC_SUBST(GWENHYWFAR_VERSION_FULL_STRING)
 AC_SUBST(GWENHYWFAR_VERSION_STRING)
-AC_SUBST(rpm_version)
-AC_SUBST(rpm_release)
 
 AC_DEFINE_UNQUOTED(GWENHYWFAR_VERSION_MAJOR,$GWENHYWFAR_VERSION_MAJOR, 
                    [major version])
@@ -59,6 +53,7 @@ AC_SUBST(GWENHYWFAR_SO_CURRENT)
 AC_SUBST(GWENHYWFAR_SO_REVISION)
 AC_SUBST(GWENHYWFAR_SO_AGE)
 
+AM_INIT_AUTOMAKE(gwenhywfar, $GWENHYWFAR_VERSION_FULL_STRING)
 
 
 # Checks for programs.
