@@ -1,7 +1,3 @@
-%define name gwenhywfar
-%define version @rpm_version@
-%define release @rpm_release@.%{disttag}%{distver}
-
 %define is_mandrake %(test -e /etc/mandrake-release && echo 1 || echo 0)
 %define is_suse %(test -e /etc/SuSE-release && echo 1 || echo 0)
 %define is_fedora %(test -e /etc/fedora-release && echo 1 || echo 0)
@@ -25,9 +21,9 @@
 %define distver %(release="`rpm -q --queryformat='%{VERSION}' %{dist}-release 2>/dev/null`" ; if test $? != 0 ; then release="" ; fi ; echo "$release")
 
 Summary: A multi-platform helper library for other libraries
-Name: %{name}
-Version: %{version}
-Release: %{release}
+Name: gwenhywfar
+Version: @VERSION@
+Release: 1.%{disttag}%{distver}
 Source: http://download.sourceforge.net/gwenhywfar/%{name}-%{version}.tar.gz
 BuildRequires: openssl-devel
 Group: System Environment/Libraries
@@ -46,6 +42,7 @@ www.openhbci.de.
 %package devel
 Summary: Gwenhywfar development kit
 Group: Development/Libraries
+Requires: %{name} = %{version}-%{release}
 %description devel
 This package contains gwenhywfar-config and header files for writing and
 compiling programs using Gwenhywfar.
